--- a/core/src/main/webapp/WEB-INF/resources/css/ali.css
+++ b/core/src/main/webapp/WEB-INF/resources/css/ali.css
@@ -1,6 +1,11 @@
 body{
-    color: blue;
+    color: blue !important;
 }
 .ali{
-    color: blue;
+    color: blue !important;
+}
+.ui-state-default,
+.ui-widget-content .ui-state-default,
+.ui-widget-header .ui-state-default {
+    color: blue !important;
 }
