defaultTemplate added and flow changed

--- a/core/src/main/webapp/WEB-INF/resources/templates/defaultTemplate.xhtml
+++ b/core/src/main/webapp/WEB-INF/resources/templates/defaultTemplate.xhtml
@@ -26,7 +26,7 @@
     </h:head>
 
 
-    <h:body>
+    <h:body styleClass="fontRegular login-back white-back fontIran">
             <div class="mainContent">
                 <ui:insert name="content">Default value for Content</ui:insert>
             </div>
