defaultTemplate added and flow changed

--- a/core/src/main/webapp/WEB-INF/resources/templates/errorTemplate.xhtml
+++ b/core/src/main/webapp/WEB-INF/resources/templates/errorTemplate.xhtml
@@ -26,7 +26,7 @@
     </h:head>
 
 
-    <h:body styleClass="fontRegular white-back fontIran">
+    <h:body styleClass="fontRegular red-back fontIran">
             <div class="mainContent">
                 <ui:insert name="content">Default value for Content</ui:insert>
             </div>
