--- a/core/src/main/webapp/WEB-INF/resources/templates/loginTemplate.xhtml
+++ b/core/src/main/webapp/WEB-INF/resources/templates/loginTemplate.xhtml
@@ -4,14 +4,13 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:p="http://primefaces.org/ui"
+      xmlns:ps="http://primefaces.org/sentinel"
       xmlns:f="http://java.sun.com/jsf/core"
       xmlns:c="http://java.sun.com/jsp/jstl/core"
       xmlns:ui="http://java.sun.com/jsf/facelets">
 
     <h:head>
         <title>#{msg['login.txt']}</title>
-
-        <meta http-equiv="Expires" content="-1"/>
 
         <link href="./resources/sentinel-layout/css/font-icon-layout.css" rel="stylesheet" type="text/css"/>
         <link href="./resources/sentinel-layout/css/sentinel-layout.css" rel="stylesheet" type="text/css"/>
@@ -27,7 +26,7 @@
 
 
     <h:body styleClass="fontRegular login-back white-back fontIran">
-            <div class="mainContent">
+        <div class="mainContent">
                 <ui:insert name="content">Default value for Content</ui:insert>
             </div>
     </h:body>
