side menu bug fixed

--- a/core/src/main/webapp/WEB-INF/resources/templates/leftmenu.xhtml
+++ b/core/src/main/webapp/WEB-INF/resources/templates/leftmenu.xhtml
@@ -15,7 +15,10 @@
 
         <h:form id="menuform"  >
             <ps:menu id="sm_leftmenu">
-                <p:menuitem id="sm_dashboard" value="Dashboard" icon="icon-home-outline" outcome="dashboard" containerStyleClass="layout-menubar-active"/>
+
+                <p:menuitem id="sm_dashboard" value="Dashboard" icon="icon-home-outline" url="login"
+                            containerStyleClass="layout-menubar-active"/>
+
             </ps:menu>
         </h:form>
     </div>
