login page changed, minor bug fixed

--- a/core/src/main/webapp/WEB-INF/resources/templates/footer.xhtml
+++ b/core/src/main/webapp/WEB-INF/resources/templates/footer.xhtml
@@ -27,7 +27,7 @@
             <div class="EmptyBox10"></div>
 
             <div class="Container50 Responsive100">
-                <p:graphicImage name="./resources/sentinel-layout/images/LOGO.svg" styleClass="" style="height:20px;"/>
+                <p:graphicImage value="./resources/sentinel-layout/images/LOGO.svg" styleClass="" style="height:20px;"/>
                 <div class="EmptyBox10"></div>
                 <span class="DispBlock Wid100 FontSourceSansLight gray Fs12 ">+1 888 123 4567 <br/> info@sentinelsentinel.com</span>
             </div>
