--- a/core/src/main/webapp/WEB-INF/resources/templates/topbar.xhtml
+++ b/core/src/main/webapp/WEB-INF/resources/templates/topbar.xhtml
@@ -10,7 +10,7 @@
 
     <div id="layout-header" class="Unselectable fontRegular">
         <a href="dashboard.xhtml" id="layout-logo">
-            <p:graphicImage name="./resources/sentinel-layout/images/LOGO.svg" styleClass="Fleft" />
+            <p:graphicImage value="./resources/sentinel-layout/images/LOGO.svg" styleClass="Fleft" />
             <span class="Fs19 FontTitilliumSemiBoldItalic Fleft"><span class="softblue">SENTINEL</span><span class="hardblue">LAYOUT</span></span>
         </a>
         <ul id="sm-topmenu" class="layout-header-widgets white Fs14">
@@ -48,8 +48,8 @@
             </li>
             <li class="Fleft BordRadHalf TexAlCenter"><i class="icon-power"></i>
                 <ul class="layout-header-widgets-submenu BordRad5 shadows white Animated05">
-                    <li class="Animated05"><a href="login.xhtml" class="white Unselectable"><i class="icon-ccw-1"></i>Restart</a></li>
-                    <li class="Animated05"><a href="#" class="white Unselectable"><i class="icon-logout"></i>Log Out</a></li>
+                    <li class="Animated05"><a href="/web/ns/login" class="white Unselectable"><i class="icon-ccw-1"></i>Restart</a></li>
+                    <li class="Animated05"><a href="/logout" class="white Unselectable"><i class="icon-logout"></i>Log Out</a></li>
                 </ul>
             </li>
         </ul>
