--- a/core/src/main/webapp/WEB-INF/resources/templates/footer.xhtml
+++ b/core/src/main/webapp/WEB-INF/resources/templates/footer.xhtml
@@ -12,16 +12,16 @@
     <div class="Container100" style="margin-bottom:20px;">
         <div class="ContainerIndent">
             <div class="Container100">
-                <a href="#" class="DispInlBlock FontSourceSansLight hardblue Fs12 Fleft ">TERMS OF CONDITIONS</a>
+                <a href="#" class="DispInlBlock FontSourceSansLight hardblue Fs12 Fleft ">#{msg['footer.terms.of.service']}</a>
                 <span class="Fleft gray Fs12" style="padding:0px 5px;">|</span>
                 <a href="#" class="DispInlBlock FontSourceSansLight hardblue Fs12 Fleft ">SITEMAP</a>
                 <span class="Fleft gray Fs12" style="padding:0px 5px;">|</span>
-                <a href="#" class="DispInlBlock FontSourceSansLight hardblue Fs12 Fleft ">PRIVACY</a>
+                <a href="#" class="DispInlBlock FontSourceSansLight hardblue Fs12 Fleft ">#{msg['footer.privacy']}</a>
                 <span class="Fleft gray Fs12" style="padding:0px 5px;">|</span>
                 <a href="#" class="DispInlBlock FontSourceSansLight hardblue Fs12 Fleft ">LINKING POLICY</a>
 
                 <div class="EmptyBox10 ShowOnMobile"></div>
-                <span class="DispInlBlock FontSourceSansLight gray Fs12 Fright  TexAlRight FloatNoneOnMobile"> PrimeFaces Sentinel  |  All rights reserved.</span>
+                <span class="DispInlBlock FontSourceSansLight gray Fs12 Fright  TexAlRight FloatNoneOnMobile"> #{msg['footer.copy.rights']}</span>
             </div>
 
             <div class="EmptyBox10"></div>
@@ -29,7 +29,7 @@
             <div class="Container50 Responsive100">
                 <p:graphicImage value="./resources/sentinel-layout/images/LOGO.svg" styleClass="" style="height:20px;"/>
                 <div class="EmptyBox10"></div>
-                <span class="DispBlock Wid100 FontSourceSansLight gray Fs12 ">+1 888 123 4567 <br/> info@sentinelsentinel.com</span>
+                <span class="DispBlock Wid100 FontSourceSansLight gray Fs12 "> #{msg['footer.phone']} <br/> #{msg['footer.email']}</span>
             </div>
             <div class="Container50 Responsive100">
                 <div class="DispInlBlock Fright">
