--- a/core/src/main/webapp/WEB-INF/resources/templates/topbar.xhtml
+++ b/core/src/main/webapp/WEB-INF/resources/templates/topbar.xhtml
@@ -17,9 +17,9 @@
             <li class="Fleft BordRadHalf TexAlCenter"><i class="icon-user-male"></i>
                 <ul class="layout-header-widgets-submenu BordRad5 shadows white Animated05">
                     <li class="Animated05"><a class="white Unselectable"><i class="icon-user-male Fs26 OvHidden"></i><span class="Fs18">Walter White<br/><span class="Fs10">Last Login - 18.08.2014</span></span></a></li>
-                    <li class="Animated05"><a href="#" class="white Unselectable"><i class="icon-stopwatch-1"></i>User Tasks</a></li>
+                    <li class="Animated05"><a href="#" class="white Unselectable"><i class="icon-stopwatch-1"></i>#{msg['topbar.todo']}</a></li>
                     <li class="Animated05"><a href="#" class="white Unselectable"><i class="icon-users-2"></i>Create New User</a></li>
-                    <li class="Animated05"><a href="#" class="white Unselectable"><i class="icon-sliders"></i>User Preferences</a></li>
+                    <li class="Animated05"><a href="#" class="white Unselectable"><i class="icon-sliders"></i>#{msg['topbar.profile']}</a></li>
                 </ul>
             </li>
             <li class="Fleft BordRadHalf TexAlCenter"><i class="icon-mail"></i><span class="alertBubble BordRad10 Fs9">166</span>
@@ -42,14 +42,14 @@
             </li>
             <li class="Fleft BordRadHalf TexAlCenter"><i class="icon-wrench-1"></i>
                 <ul class="layout-header-widgets-submenu BordRad5 shadows white Animated05">
-                    <li class="Animated05"><a href="#" class="white Unselectable"><i class="icon-sun"></i>System Settings</a></li>
-                    <li class="Animated05"><a href="#" class="white Unselectable"><i class="icon-lifebuoy"></i>Help Desk</a></li>
+                    <li class="Animated05"><a href="#" class="white Unselectable"><i class="icon-sun"></i>#{msg['topbar.setting']}</a></li>
+                    <li class="Animated05"><a href="#" class="white Unselectable"><i class="icon-lifebuoy"></i>#{msg['topbar.help']}</a></li>
                 </ul>
             </li>
             <li class="Fleft BordRadHalf TexAlCenter"><i class="icon-power"></i>
                 <ul class="layout-header-widgets-submenu BordRad5 shadows white Animated05">
-                    <li class="Animated05"><a href="/web/ns/login" class="white Unselectable"><i class="icon-ccw-1"></i>Restart</a></li>
-                    <li class="Animated05"><a href="/logout" class="white Unselectable"><i class="icon-logout"></i>Log Out</a></li>
+                    <li class="Animated05"><a href="/web/ns/login" class="white Unselectable"><i class="icon-ccw-1"></i>#{msg['topbar.restart']}</a></li>
+                    <li class="Animated05"><a href="/logout" class="white Unselectable"><i class="icon-logout"></i>#{msg['topbar.logout']}</a></li>
                 </ul>
             </li>
         </ul>
